--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
