--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^4.2.2"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
