--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "aos": "^2.3.4",
     "lucide-react": "^0.545.0",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
