--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.10.1",
     "aos": "^2.3.4",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-range-slider-input": "^3.0.7",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
